# graphnetz

./: .gitignore  CONTRIBUTING.md  LICENCE.txt  README.md  pyproject.toml  ruft_default.toml
.github/workflows/: ci.yaml  release.yaml
benchmark/: extract_networks_name.py  undirected_unipartite_nets.json
docs/: Makefile  benchmark.md  conf.py  contributing.md  datasets.md  getting-started.md  index.md  models.md  report.md  requirements.txt
docs/_static/: _gen_cd_figures.py  custom.css
docs/api/: benchmark.md  datasets.md  index.md  models.md  plotting.md  training.md
examples/: 01_benchmark.ipynb  02_knowledge.ipynb  03_custom_artifacts.ipynb  04_ogb.ipynb  experiment.py  playground.ipynb  playground.py
src/graphnet/datasets/: __init__.py  _netz.py
src/graphnet/models/: __init__.py  _gcn.py
src/graphnetz/: __init__.py  benchmark.py  plotting.py  training.py
src/graphnetz/benchmark/: __init__.py  _report.py  _report_plots.py  _runner.py  _specs.py  _stats.py  _tasks.py
src/graphnetz/datasets/: __init__.py  _netz.py  _ogb.py  biology.py  combinatorial.py  computing.py  finance.py  infrastructure.py  knowledge.py  ogb.py  physics.py  security.py  social.py  vision.py
src/graphnetz/models/: __init__.py  _adapters.py  _dgi.py  _gat.py  _gcn.py  _gin.py  _graph_transformer.py  _graphsage.py
tests/: test_custom_datasets.py  test_pairwise_methods.py  test_smoke.py
