[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphlens"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["graph-neural-networks", "network-science", "benchmark"]
authors = [
  { name = "Kleyton da Costa", email = "kleyton.vsc@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/kleyt0n/graphlens#readme"
Issues = "https://github.com/kleyt0n/graphlens/issues"
Source = "https://github.com/kleyt0n/graphlens"

[tool.hatch.version]
path = "src/graphlens/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/graphlens tests}"

[tool.coverage.run]
source_pkgs = ["graphlens", "tests"]
branch = true
parallel = true
omit = [
  "src/graphlens/__about__.py",
]

[tool.coverage.paths]
graphlens = ["src/graphlens", "*/graphlens/src/graphlens"]
tests = ["tests", "*/graphlens/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
