[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphnet_benchmark"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["graph-neural-networks", "network-science", "benchmark"]
authors = [
  { name = "Kleyton da Costa", email = "kleyton.vsc@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "torch==2.6",
  "torch_geometric==2.6",
  "networkx==3.4.2",
  "pandas==2.2.3"
]

[project.urls]
Documentation = "https://github.com/kleyt0n/graphnet#readme"
Issues = "https://github.com/kleyt0n/graphnet/issues"
Source = "https://github.com/kleyt0n/graphnet"

[tool.hatch.version]
path = "src/graphnet/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/graphnet tests}"

[tool.coverage.run]
source_pkgs = ["graphnet", "tests"]
branch = true
parallel = true
omit = [
  "src/graphnet/__about__.py",
]

[tool.coverage.paths]
graphnet = ["src/graphnet", "*/graphnet/src/graphnet"]
tests = ["tests", "*/graphnet/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
extend = "ruff_default.toml"
exclude = ["docs/**", "tests/**", "tutorials/**"]

paths = ["./src"]

[tool.hatch.envs.testing.scripts]
run = ["python -m pytest"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]
[tool.hatch.envs.default]
env-vars = { PYTHONPATH = "src" }
