[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphnetz"
dynamic = ["version"]
description = "A large-scale database and benchmark for graph learning."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENCE.txt"]
keywords = ["graph-neural-networks", "network-science", "benchmark"]
authors = [
  { name = "Kleyton da Costa", email = "kleyton.vsc@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.7",
  "torch-geometric>=2.7",
  "networkx>=3.4",
  "pandas>=2.2",
  "requests>=2.31",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "tqdm>=4.66",
]

[project.optional-dependencies]
chem = ["rdkit>=2023.9"]
ogb = ["ogb>=1.3"]

[project.urls]
Documentation = "https://github.com/kleyt0n/graphnetz#readme"
Issues = "https://github.com/kleyt0n/graphnetz/issues"
Source = "https://github.com/kleyt0n/graphnetz"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
docs = [
  "sphinx>=7.3",
  "furo>=2024.5",
  "myst-parser>=3.0",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.6",
  "linkify-it-py>=2.0",
]

[tool.hatch.version]
path = "src/graphnetz/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/graphnetz"]

[tool.hatch.build.targets.sdist]
include = ["src/graphnetz", "README.md", "LICENCE.txt"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/graphnetz"]
branch = true
omit = ["src/graphnetz/__about__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
files = ["src/graphnetz"]

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = ["examples", "benchmark", "papers"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
select = [
  "E", "F", "W",       # pycodestyle / pyflakes
  "I",                  # isort
  "UP",                 # pyupgrade
  "B",                  # bugbear
  "SIM",                # simplify
  "RUF",                # ruff-specific
  "TID",                # tidy imports
  "PT",                 # pytest style
  "PERF",               # performance
]
ignore = [
  "E501",   # handled by formatter
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
